--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,40 @@
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
+# OSX
+*.DS_Store
+
+
+# Gradle files
+build/
+.gradle/
+*/build/
+
+
+# IDEA
+*.iml
+.idea/*
+
+
+# Built application files
+*.apk
+*.ap_
+
+
+# Files for the Dalvik VM
+*.dex
+
+
+# Java class files
+*.class
+
+
+# Generated files
+antLauncher/bin
+antLauncher/gen
+
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+
+# Log Files
+*.log 
+captures/
